tests/casts/cast_error.sld
func main() {
    let e : int? = none;
    // This could have a better error message
    let d : int = cast e : int;
}